feat: add forgot password api doc
